commit translated contents

--- a/api/qsharp/microsoft.quantum.convert.functionasoperation.yml
+++ b/api/qsharp/microsoft.quantum.convert.functionasoperation.yml
@@ -27,7 +27,7 @@ input:
 output:
   content: ('Input => 'Output)
   types:
-  - summary: 操作 `op` 这样 `op(input)` 与所有 `input``fn(input)` 相同。
+  - summary: 与所有`op` `input`相同`fn(input)`的`op(input)`操作。
     isOperation: true
     input:
       types:
@@ -43,9 +43,9 @@ typeParameters:
 - uid: "'Output"
   summary: 要转换的函数的输出类型。
 metadata:
-  ms.openlocfilehash: a58e2fc4f9c8f931b4020cb06abebdd94c642bd9
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a1383f44c1515e60cde3ee44f8daf3c53a621839
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220379"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82659525"
