--- a/api/qsharp/microsoft.quantum.convert.intasbigint.yml
+++ b/api/qsharp/microsoft.quantum.convert.intasbigint.yml
@@ -4,7 +4,7 @@ name: IntAsBigInt
 type: function
 namespace: Microsoft.Quantum.Convert
 summary: 将给定整数转换为等效的大整数。
-remarks: 有关更多详细信息，请参阅[ C# BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。
+remarks: '有关更多详细信息，请参阅[c # BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。'
 syntax: 'function IntAsBigInt (a : Int) : BigInt'
 input:
   content: '(a : Int)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 1732e254d908a650da2eff5b5faf1d7f74fd68e6
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 51722709bce287d94042c05bcf8bc802ffbfefed
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231786"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82659442"
