--- a/api/qsharp/microsoft.quantum.convert.boolarrayasresultarray.yml
+++ b/api/qsharp/microsoft.quantum.convert.boolarrayasresultarray.yml
@@ -3,27 +3,27 @@ uid: microsoft.quantum.convert.boolarrayasresultarray
 name: BoolArrayAsResultArray
 type: function
 namespace: Microsoft.Quantum.Convert
-summary: 将 `Bool[]` 类型转换为 `Result[]` 类型，其中 `true` 映射到 `One`，`false` 映射到 `Zero`。
+summary: '`Bool[]`将`Result[]`类型转换为类型，其中`true`映射到`One`并`false`映射到。 `Zero`'
 syntax: 'function BoolArrayAsResultArray (input : Bool[]) : Result[]'
 input:
   content: '(input : Bool[])'
   types:
   - name: input
-    summary: 要转换的 `Bool[]`。
+    summary: '`Bool[]`要转换的。'
     isArray: true
     isPrimitive: true
     uid: Bool
 output:
   content: Result[]
   types:
-  - summary: 表示 `input`的 `Result[]`。
+  - summary: 表示 `input` 的 `Result[]`。
     isArray: true
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: c81ac2d1bcfdc8e08769bc448f83fa215e058a9a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 6ac8c033c3323149d8ec5496c3a66a98d8bb48d7
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066874"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82661299"
