--- a/api/qsharp/microsoft.quantum.convert.boolarrayasbigint.yml
+++ b/api/qsharp/microsoft.quantum.convert.boolarrayasbigint.yml
@@ -7,7 +7,7 @@ summary: >-
   将给定的布尔值数组转换为等效的大整数。
 
   数组的0元素是大整数的最小有效位。
-remarks: 有关更多详细信息，请参阅[ C# BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。
+remarks: '有关更多详细信息，请参阅[c # BigInteger 构造函数](https://docs.microsoft.com/dotnet/api/system.numerics.biginteger.-ctor?view=netframework-4.7.2#System_Numerics_BigInteger__ctor_System_Int64_)。'
 syntax: 'function BoolArrayAsBigInt (a : Bool[]) : BigInt'
 input:
   content: '(a : Bool[])'
@@ -22,9 +22,9 @@ output:
   - isPrimitive: true
     uid: BigInt
 metadata:
-  ms.openlocfilehash: 40a263976361a3322142d17213c28b2b8ec7d81d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 770b565a3137085ff6af3ea3d4a1ad3ff5938f6d
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73227468"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82661975"
