commit translated contents

--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.qubitizationoracle.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.qubitizationoracle.yml
@@ -9,12 +9,12 @@ input:
   content: '(qSharpData : Microsoft.Quantum.Chemistry.JordanWigner.JordanWignerEncodingData)'
   types:
   - name: qSharpData
-    summary: '`JordanWignerEncodingData` 格式描述的 Hamiltonian。'
+    summary: 格式描述的`JordanWignerEncodingData` Hamiltonian。
     uid: microsoft.quantum.chemistry.jordanwigner.jordanwignerencodingdata
 output:
   content: (Int, (Double, (Qubit[] => Unit is Adj + Ctl)))
   types:
-  - summary: 一个元组，其中： `Int` 是分配的 qubits 的数量，`Double` 是 Hamiltonian 系数的一种标准，操作是 Qubitization 创建的量程审核。
+  - summary: 元组，其中`Int` ：是已分配的 qubits 数`Double` ，是 Hamiltonian 系数的一种标准，操作是 Qubitization 创建的量程审核。
     types:
     - isPrimitive: true
       uid: Int
@@ -35,9 +35,9 @@ output:
         - Adjoint
         - Controlled
 metadata:
-  ms.openlocfilehash: 4890f95631a5d99720fc5da307707ad040f0b391
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 9e58837b8f4d59505a321578cbd9f69b4c849627
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73233503"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82663446"
