--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem.yml
@@ -3,23 +3,23 @@ uid: microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsys
 name: OptimizedBlockEncodingGeneratorSystem
 type: function
 namespace: Microsoft.Quantum.Chemistry.JordanWigner
-summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 Pauli `GeneratorIndex`形式表示的一个 `GeneratorSystem`。
+summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为 Pauli `GeneratorSystem` `GeneratorIndex`的表示形式。
 syntax: 'function OptimizedBlockEncodingGeneratorSystem (data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms) : Microsoft.Quantum.Chemistry.JordanWigner.OptimizedBEGeneratorSystem'
 input:
   content: '(data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms)'
   types:
   - name: data
-    summary: '`JWOptimizedHTerms` 格式的 Hamiltonian 说明。'
+    summary: '`JWOptimizedHTerms`格式的 Hamiltonian 说明。'
     uid: microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms
 output:
   content: Microsoft.Quantum.Chemistry.JordanWigner.OptimizedBEGeneratorSystem
   types:
-  - summary: Hamiltonian 的表示形式 `GeneratorSystem`。
+  - summary: Hamiltonian 的表示形式`GeneratorSystem`。
     uid: microsoft.quantum.chemistry.jordanwigner.optimizedbegeneratorsystem
 metadata:
-  ms.openlocfilehash: 85e34ffd430096873e9bdb9e15be9ebaf7127e94
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 3a8354223ba4c5fe7c45d6b494f62aa5ceb41a38
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73231922"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82665233"
