--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms.yml
@@ -4,14 +4,14 @@ name: JWOptimizedHTerms
 type: newtype
 namespace: Microsoft.Quantum.Chemistry.JordanWigner
 summary: >-
-  从C#传递到 Q # 以表示 Hamiltonian 的术语的数据格式。
+  从 c # 传递到 Q # 以表示 Hamiltonian 的术语的数据格式。
 
   表示的数据的含义取决于接收数据的算法。
 syntax: newtype JWOptimizedHTerms = (Microsoft.Quantum.Chemistry.HTerm[], Microsoft.Quantum.Chemistry.HTerm[], Microsoft.Quantum.Chemistry.HTerm[], Microsoft.Quantum.Chemistry.HTerm[]);
 metadata:
-  ms.openlocfilehash: 24db6a67c0450606bf43388bb460dfd4018bb580
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: ce994e1a01a4c620ef7d1e1c54bb090194e48c96
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73228488"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82666123"
