--- a/api/qsharp/microsoft.quantum.canon.applytofirstqubitca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytofirstqubitca.yml
@@ -6,7 +6,7 @@ namespace: Microsoft.Quantum.Canon
 summary: >-
   将操作 op 应用于寄存器中的第一个 qubit。
 
-  修饰符 `CA` 指示操作可控制和 adjointable。
+  修饰符`CA`指示该操作是可控制的且 adjointable。
 syntax: 'operation ApplyToFirstQubitCA (op : (Qubit => Unit is Adj + Ctl), register : Qubit[]) : Unit'
 input:
   content: '(op : (Qubit => Unit is Adj + Ctl), register : Qubit[])'
@@ -41,9 +41,9 @@ functors:
 seeAlso:
 - microsoft.quantum.canon.applytofirstqubit
 metadata:
-  ms.openlocfilehash: 82720bee8d8317423db639ff40da68c576979dd2
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 4d6b53afdface52a6b38fa4fea1b3e2700340a72
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73213358"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82668559"
