--- a/api/qsharp/microsoft.quantum.canon.applytoelementca.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoelementca.yml
@@ -7,7 +7,7 @@ summary: >-
   将操作应用到数组的给定元素。
 
 
-  给定一个操作 `op`，索引 `index`和 `targets`目标的数组，将应用 `op(targets[index])`。
+  给定一个操作`op`、一个索引`index`和一个目标`targets`数组，适用于`op(targets[index])`。
 syntax: "operation ApplyToElementCA (op : ('T => Unit is Adj + Ctl), index : Int, targets : 'T[]) : Unit"
 input:
   content: "(op : ('T => Unit is Adj + Ctl), index : Int, targets : 'T[])"
@@ -50,9 +50,9 @@ seeAlso:
 - microsoft.quantum.canon.applytoelementc
 - microsoft.quantum.canon.applytoelementa
 metadata:
-  ms.openlocfilehash: 1a1ef74527720f326c2fdbfbdd53e72469a5f520
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 16c86cc428665d0b744ced8c78f3ca4f0027d9b6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908015"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82669921"
