--- a/api/qsharp/microsoft.quantum.canon.applytoelementa.yml
+++ b/api/qsharp/microsoft.quantum.canon.applytoelementa.yml
@@ -7,7 +7,7 @@ summary: >-
   将操作应用到数组的给定元素。
 
 
-  给定一个操作 `op`，索引 `index`和 `targets`目标的数组，将应用 `op(targets[index])`。
+  给定一个操作`op`、一个索引`index`和一个目标`targets`数组，适用于`op(targets[index])`。
 syntax: "operation ApplyToElementA (op : ('T => Unit is Adj), index : Int, targets : 'T[]) : Unit"
 input:
   content: "(op : ('T => Unit is Adj), index : Int, targets : 'T[])"
@@ -48,9 +48,9 @@ seeAlso:
 - microsoft.quantum.canon.applytoelementc
 - microsoft.quantum.canon.applytoelementca
 metadata:
-  ms.openlocfilehash: 9350a002eea26f5eb9a2471c0d35b8b7b8447462
-  ms.sourcegitcommit: 6ccea4a2006a47569c4e2c2cb37001e132f17476
+  ms.openlocfilehash: 204580bc5c7f7346c3925cff736d7565d5449a83
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 02/28/2020
-  ms.locfileid: "77908049"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82670027"
